--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -4,63 +4,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wayste_background"
     tools:context="com.wayste.waysteprototype.ClientActivity">
-
-    <CheckBox
-        android:id="@+id/checkBox_bed"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="100dp"
-        android:checked="false"
-        android:text="Bed"
-        android:textColorLink="@android:color/holo_green_light"
-        android:textSize="24sp"
-        android:theme="@style/AlertDialog.AppCompat.Light"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <CheckBox
-        android:id="@+id/checkBox_tire"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="37dp"
-        android:text="Tire"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_bed"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/button_dispose"
+        style="@android:style/Widget.Button.Toggle"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
         android:onClick="saveRequest"
         android:text="Dispose"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_tire"
-        app:layout_constraintVertical_bias="0.09"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginBottom="187dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_ElectronicWastes" />
 
     <TextView
         android:id="@+id/textView_InvalidMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Please select item to dispose."
+        android:layout_width="328dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="20dp"
+        android:text="Please select the item/s you want to dispose."
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_dispose" />
+        app:layout_constraintTop_toBottomOf="@+id/button_dispose"
+        app:layout_constraintHorizontal_bias="0.505" />
+
+    <CheckBox
+        android:id="@+id/checkBox_biodegradable"
+        android:layout_width="230dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="73dp"
+        android:text="Biodegradables"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox_BulkWastes"
+        android:layout_width="230dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:text="Bulk Wastes"
+        android:textSize="24sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_biodegradable"
+        app:layout_constraintLeft_toRightOf="@+id/imageView_bulkwaste"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <CheckBox
+        android:id="@+id/checkBox_ElectronicWastes"
+        android:layout_width="230dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:text="Electronic Wastes"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_BulkWastes"
+        app:layout_constraintHorizontal_bias="0.662" />
+
+    <ImageView
+        android:id="@+id/imageView_biodegradable"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/wayste_biodegradable" />
+
+    <ImageView
+        android:id="@+id/imageView_bulkwaste"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="125dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/wayste_bulkwaste" />
+
+    <ImageView
+        android:id="@+id/imageView_electronicwaste"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="26dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/wayste_electronicwastes"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="200dp" />
+
 </android.support.constraint.ConstraintLayout>
