--- a/app/src/main/res/layout/activity_collector.xml
+++ b/app/src/main/res/layout/activity_collector.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wayste_background"
     tools:context="com.wayste.waysteprototype.CollectorActivity">
 
     <TextView
@@ -11,32 +12,86 @@
         android:layout_width="360dp"
         android:layout_height="40dp"
         android:layout_marginTop="50dp"
-        android:text="Inventory goes here..."
+        android:text="Summary"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="186dp"
-        android:layout_height="43dp"
+        android:layout_width="190dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="20dp"
-        android:text="Wood"
-        android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
+        android:layout_marginStart="16dp"
+        android:text="Biodegradable"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/textView9" />
+        app:layout_constraintRight_toLeftOf="@+id/textView9"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="114dp"
-        android:layout_height="43dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="40dp"
         android:text="20 Kg"
-        android:textSize="20sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="190dp"
+        android:layout_height="50dp"
+        android:text="Bulk Wastes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/textView11"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="50Kg"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="190dp"
+        android:layout_height="50dp"
+        android:text="Electronic Wastes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/textView13"
+        android:layout_marginRight="20dp" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="15Kg"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
