--- a/app/src/main/res/layout/activity_show_collector_details.xml
+++ b/app/src/main/res/layout/activity_show_collector_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wayste_background"
     tools:context="com.wayste.waysteprototype.ShowCollectorDetails">
 
     <TextView
@@ -43,11 +44,13 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="162dp"
+        android:layout_height="45dp"
         android:layout_marginTop="50dp"
         android:onClick="completed"
         android:text="COMPLETED"
+        android:textAlignment="center"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
